dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_3221148872.log
== SUBMISSION (2025-08-30 20:12:30)
-- CODE: 
float Sosígenes = 40
float Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    float Sosígenes = 40
          ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    float Sosígenes = 40
          ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:12:47)
-- CODE: 
Sosígenes = 40
floatJocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Sosígenes + Jocasta)
                      ^^^^^^^
NameError: name 'Jocasta' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Sosígenes + Jocasta)
                      ^^^^^^^
NameError: name 'Jocasta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 02:21:41)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:03:59)
-- CODE: 
Sosígenes = 40
Jocasta = 35
prin("Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosígenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosígenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:13:03)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:04:58)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:02:13)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:12:43)
-- CODE: 
Sosígenes = 40
floatJocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Sosígenes + Jocasta)
                      ^^^^^^^
NameError: name 'Jocasta' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Sosígenes + Jocasta)
                      ^^^^^^^
NameError: name 'Jocasta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:02:09)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:05:01)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:02:10)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:05:17)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:12:49)
-- CODE: 
Sosígenes = 40
floatJocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Sosígenes + Jocasta)
                      ^^^^^^^
NameError: name 'Jocasta' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Sosígenes + Jocasta)
                      ^^^^^^^
NameError: name 'Jocasta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:01:17)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes")
prin("Jocasta")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin("Sosigenes")
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin("Sosigenes")
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:52:44)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:05:15)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:03:03)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:12:29)
-- CODE: 
float Sosígenes = 40
float Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    float Sosígenes = 40
          ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    float Sosígenes = 40
          ^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:12:32)
-- CODE: 
float Sosígenes = 40
float Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    float Sosígenes = 40
          ^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    float Sosígenes = 40
          ^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:02:12)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosigenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 22:36:52)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:01:19)
-- CODE: 
Sosigenes = 40
Jocasta = 35
prin("Sosigenes")
prin("Jocasta")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin("Sosigenes")
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin("Sosigenes")
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:13:06)
-- CODE: 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:04:17)
-- CODE: 
Sosígenes = 40
Jocasta = 35
int("Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    int("Sosígenes + Jocasta)
        ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    int("Sosígenes + Jocasta)
        ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 02:21:31)
-- CODE: 
# nome dos individuos 
Sosígenes = 40
Jocasta = 35
print(Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:04:00)
-- CODE: 
Sosígenes = 40
Jocasta = 35
prin("Sosígenes + Jocasta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosígenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 3
    prin("Sosígenes + Jocasta)
         ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
